--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "author": "Laura Veee",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.16.0",
     "express": "^4.14.0",
-    "hbs": "^4.0.0"
+    "hbs": "^4.0.0",
+    "request": "^2.79.0"
   },
   "devDependencies": {
     "eslint": "^3.14.0",
