--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "request": "^2.79.0"
   },
   "devDependencies": {
+    "dotenv": "^4.0.0",
     "eslint": "^3.14.0",
     "eslint-config-google": "^0.7.1"
   }
