--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
-  "engines": "6.2.1",
+  "engines": {
+    "node": "6.2.1"
+    },
   "keywords": [
     "weather"
   ],
